--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,15 +8,24 @@ h1 {
     font-size: 100px;
   }
 
-  .container {
+  h2 {
+    font-family: 'Permanent Marker', cursive;
+    background-color: white;
+    padding-bottom: 20px;
+    text-align: center;
+    padding-top: 20px;
+    width: 100%;
+    font-size: 30px;
+  }
+
+.container {
       font-family: 'Syne', sans-serif;
       width:75%;
       padding-right:25px;
       padding-left:25px;
       margin-right:auto;
       margin-left:auto;
-      padding-top: 25px;
-      padding-bottom: 25px;
+      padding-bottom: 10px;
       border-style:ridge;
       background-color: white;}
 
@@ -28,3 +37,28 @@ body {
         background-attachment: fixed;
         font-family: 'Syne', sans-serif;
       }
+
+   
+      
+form.search-bar input[type=text] {
+        padding: 10px;
+        font-size: 17px;
+        border: 1px solid grey;
+        float: left;
+        width: 80%;
+        background: #f1f1f1;
+      }
+form.search-bar button {
+        float: left;
+        width: 20%;
+        padding: 10px;
+        background: #2196F3;
+        color: white;
+        font-size: 17px;
+        border: 1px solid grey;
+        border-left: none; /* Prevent double borders */
+        cursor: pointer;
+      }
+ .divider {padding-top: 20px;padding-bottom: 50px;}
+
+.divider2 {padding-top: 20px;padding-bottom: 10px;}
