--- a/views/album.handlebars
+++ b/views/album.handlebars
@@ -3,7 +3,7 @@
         <div class="col-md-12">
 
             <ul>
-                {{#if Albun}}
+                {{#if Album}}
                 <img src="{{imageURL}}" alt="{{name}}">
                 <h1> {{name}} </h1>
                 <h2> {{artist}} </h2>
