Made style tweaks, fixed buttons

--- a/views/collection.handlebars
+++ b/views/collection.handlebars
@@ -18,7 +18,7 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-12 col-offset-2">
+        <div class="col-12">
             <h2>My Collection</h2>
 
             {{#if albums}}
