--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -5,10 +5,21 @@ body {
     background-attachment: fixed;
     font-family: 'Syne', sans-serif;
   }
+  strong ,.albumTitleText{
+      font-size: 25px;
+      display: flex;
+      justify-content: center;
+  }
+  em , .artistText{
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+}
+
 .n{
 background-color: white;
 }
-.n1, .n2, .n3, .n4, .n6, .n7 {
+.n1, .n2, .n3, .n4, .n6, .n7 , .nx{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,12 +32,43 @@ img {
     linear-gradient(to right, rgb(255, 215, 83), rgb(255, 255, 255));
     background-origin: border-box;
     background-clip: content-box, border-box;
+    -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
-img.nx{
+img:hover {
+    border-radius: 50%;
+    border: double 0.3em transparent;
+    background-image: linear-gradient(white, white), 
+    linear-gradient(to right, rgb(119, 255, 92), rgb(255, 255, 255));
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    -webkit-transform: scale(1.3);
+	transform: scale(1.3);
+ }
+/* img#nx{
     border-radius: 50%;
     border: double 0.3em transparent;
     background-image: linear-gradient(white, white), 
     linear-gradient(to right, rgb(255, 133, 32), rgb(255, 215, 83));
     background-origin: border-box;
     background-clip: content-box, border-box; 
+} */
+img.bigI {
+    border-radius: 0%;
+    background-image: linear-gradient(white, white), 
+    linear-gradient(to right, rgb(255, 255, 255), rgb(255, 255, 255));;
+    height: 350px;
 }
+img.bigI:hover {
+    -webkit-transform: scale(1);
+	transform: scale(1);
+ }
+
+.bigImg, .twobuttons {
+    display: flex;
+    align-content:center;
+    justify-content: center;
+}
+
